--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget11/pump-tables-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget11/pump-tables-widget11.component.html
@@ -570,7 +570,7 @@
                                 style="width: 90%;">
                                 <tr>
                                     <th colspan="12">
-                                        <!-- <app-page-title title="All-in-One(Lube) Shift Sales Summary"></app-page-title> -->
+                                        All-in-One(Lube) Shift Sales Summary
                                     </th>
                                 </tr>
                                 <tr>
@@ -695,7 +695,7 @@
                             <table *ngIf="digitalLubeData">
                                 <tr>
                                     <td colspan="12">
-                                        <!-- <app-page-title title="Digital(Lube) Summary"></app-page-title> -->
+                                        Digital(Lube) Summary
                                     </td>
                                 </tr>
                                 <tr>
@@ -954,7 +954,7 @@
                             <table *ngIf="lubeCrDetails">
                                 <tr>
                                     <td colspan="12">
-                                        <!-- <app-page-title title="Lube Customers Sales Summary"></app-page-title> -->
+                                        Lube Customers Sales Summary
                                     </td>
                                 </tr>
                                 <tr>
@@ -1023,7 +1023,7 @@
                             <table *ngIf="advAmtDetails">
                                 <tr>
                                     <td colspan="12">
-                                        <!-- <app-page-title title="Advance Amt Customers Summary"></app-page-title> -->
+                                        Advance Amt Customers Summary
                                     </td>
                                 </tr>
                                 <tr>
@@ -1082,7 +1082,7 @@
                             <table *ngIf="lubeDetails">
                                 <tr>
                                     <td colspan="12">
-                                        <!-- <app-page-title title="Lube(Credit) Customers Sales Summary"></app-page-title> -->
+                                        Lube(Credit) Customers Sales Summary
                                     </td>
                                 </tr>
                                 <tr>
@@ -1162,7 +1162,7 @@
                             <table *ngIf="lubeDetails">
                                 <tr>
                                     <td colspan="12">
-                                        <!-- <app-page-title title="Lube(Cash) Customers Sales Summary"></app-page-title> -->
+                                       Lube(Cash) Customers Sales Summary
                                     </td>
                                 </tr>
                                 <tr>
