--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget11/tiles-widget11.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget11/tiles-widget11.component.html
@@ -2,6 +2,7 @@
   <span *ngIf="accessGroup != '21'">
     <div class="row mb-2">
       <div class="col-sm-7">
+        ACCOUNTING STATUS 
       </div>
     </div>
     <div class="row">
