--- a/src/app/_metronic/partials/content/widgets/tiles/tiles-widget5/tiles-widget5.component.html
+++ b/src/app/_metronic/partials/content/widgets/tiles/tiles-widget5/tiles-widget5.component.html
@@ -181,31 +181,31 @@
           <div class="col-sm-3">
             <div class="text-sm-end">
               <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" placement="bottom"
-                (click)="exportToPDF()"><i class="fas fa-file-pdf"></i></span> <br>
+                (click)="exportToPDF()"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span> <br>
             </div>
           </div>
           <div class="col-sm-1">
             <div class="text-sm-end">
               <span *ngIf="isFilter">
                 <span *ngIf="isOILBook" (click)="isOILBookFilter()" style="font-size: 35px;cursor: pointer;"
-                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span>
+                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                 <span *ngIf="isBankBook" (click)="isBankBookFilter()" style="font-size: 35px;cursor: pointer;"
-                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span>
+                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                 <span *ngIf="isPOSBook" (click)="isPOSBookFilter()" style="font-size: 35px;cursor: pointer;"
-                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span>
+                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                 <span *ngIf="isCASHBook" (click)="isCASHBookFilter()" style="font-size: 35px;cursor: pointer;"
-                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span>
+                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                 <br>
               </span>
               <span *ngIf="!isFilter">
                 <span *ngIf="isOILBook" (click)="isOILBookNoFilter()" style="font-size: 35px;cursor: pointer;"
-                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span>
+                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                 <span *ngIf="isBankBook" (click)="isBankBookNoFilter()" style="font-size: 35px;cursor: pointer;"
-                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span>
+                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                 <span *ngIf="isPOSBook" (click)="isPOSBookNoFilter()" style="font-size: 35px;cursor: pointer;"
-                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span>
+                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                 <span *ngIf="isCASHBook" (click)="isCASHBookNoFilter()" style="font-size: 35px;cursor: pointer;"
-                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i></span>
+                  ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
                 <br>
               </span>
             </div>
