--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget7/base-tables-widget7.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget7/base-tables-widget7.component.html
@@ -26,7 +26,7 @@
 
     <div class="col-md-1">
       <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" placement="bottom"
-        (click)="exportToPDFDAYQty()"><i class="fas fa-file-pdf"></i></span>
+        (click)="exportToPDFDAYQty()"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span>
     </div>
 
     <!-- <div class="col-md-1">
