--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget8/base-tables-widget8.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="col-md-1 text-sm-end">
       <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" placement="bottom"
-        (click)="exportToPDFMONTHQty()"><i class="fas fa-file-pdf"></i></span>
+        (click)="exportToPDFMONTHQty()"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span>
     </div>
 
     <!-- <div class="col-md-1 text-sm-end">
