changes added by tejaswini

--- a/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget12/pump-tables-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/pump-tables/pump-tables-widget12/pump-tables-widget12.component.html
@@ -326,7 +326,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <input class="form-control" placeholder="Pump Nz" [(ngModel)]="pumpNz"
-                                            [ngModelOptions]="{standalone: true}" readonly>
+                                            [ngModelOptions]="{standalone: true}" disabled>
                                     </div>
 
                                     <div class="col-md-3">
@@ -334,7 +334,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <input class="form-control" placeholder="Product-Rate" [(ngModel)]="productRate"
-                                            [ngModelOptions]="{standalone: true}" readonly>
+                                            [ngModelOptions]="{standalone: true}" disabled>
                                     </div>
                                 </div>
                                 <br>
@@ -377,7 +377,7 @@
                                     <div class="col-md-3">
                                         <input class="form-control" placeholder="Total Sales"
                                             [(ngModel)]="meterSalesAmount" [ngModelOptions]="{standalone: true}"
-                                            readonly>
+                                            disabled>
                                     </div>
 
                                     <div class="col-md-3">
@@ -386,7 +386,7 @@
                                     <div class="col-md-3">
                                         <input class="form-control" placeholder="Total Sales"
                                             [(ngModel)]="meterSalesQuantity" [ngModelOptions]="{standalone: true}"
-                                            readonly>
+                                            disabled>
                                     </div>
                                 </div>
                                 <hr>
